fixed the homepage alignment

--- a/client/src/components/Homepage/Homepage.css
+++ b/client/src/components/Homepage/Homepage.css
@@ -5,5 +5,5 @@
 }
 
 .homepage-wanted-ads {
-	margin-top: 300px;
+	margin-top: auto;
 }
